--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/((?!assets|images|favicon).*)", "destination": "/index.html" }
+    { "source": "/((?!assets|images|favicon|logo\\.png).*)", "destination": "/index.html" }
   ]
 }
