--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/((?!assets|images|favicon|logo\\.png|sitemap\\.xml|robots\\.txt).*)", "destination": "/index.html" }
+    { "source": "/((?!assets|images|favicon|logo\\.png|sitemap\\.xml|robots\\.txt|googlee769bec0be0e47e4\\.html).*)", "destination": "/index.html" }
   ]
 }
